feat: displaying and creating of posts
